# DetectShape-ChangeHue

./: CMakeLists.txt  README.md  huecontroller.cpp  huecontroller.h  main.cpp  main.qml
